1.17 -> 2.0:
    - devzero2000: malloc check voodo portability quirk
      Get rid of a non portable shell export VAR=VALUE
      costruct. "Posix requires export to honor assignments 
      made as arguments, but older shells do not support this, 
      including /bin/sh in Solaris 10. 
      Portable scripts should separate assignments 
      and exports into different statements"
      (from http://www.gnu.org/savannah-checkouts/gnu/autoconf/manual/autoconf-2.69/html_node/Limitations-of-Builtins.html)
    - devzero2000: check secure_getenv for glibc 2.17 correctly
      Use secure_getenv if it is available.
      Fall back to __secure_getenv if it is not. 
    - devzero2000: check secure_getenv for glibc 2.17
      In glibc 2.17, __secure_getenv was renamed to secure_getenv.
      So check also for it.
      Reference: 
          http://sourceware.org/glibc/wiki/Tips_and_Tricks/secure_getenv
          http://marc.info/?t=134192618500001&r=1&w=2
    - devzero2000: redo the malloc check voo-doo
      in a more simple way. Drop all the crap
      around to create a portable shell function for 
      random number generation.
      $$ alone suffices to avoid the bias.
    - devzero2000: redo the malloc check voo-doo
      in a more portable way. Permit testit.sh
      work if it is called directly also.
    - devzero2000: fix compiler warning -Wunused-variable 
    - devzero2000: Enable many more gcc warnings for popt
      Inspired by http://www.spinics.net/lists/selinux/msg11726.html
      but popt can, unlike libselinux now, also detect if  
      gcc support a compiler flag or not 
    - devzero2000: Fix move popt.m4 to acinclude.m4
      so we can put it under version control
    - devzero2000: give some color to autogen.sh
      Certainly not so useful but not hurt either.
    - jbj: i18n: msgmerge (Translation Project).
    - devzero2000: redo commit 8396019 
      Useless to have format crap just for conforming
      to oddball platform 