@@ -229,13 +229,11 @@ AS_IF([ test x"$use_valgrind" = x"true" ],
               		VALGRIND_ENVIRONMENT="libtool --mode=execute "
                     ]
               )
-              VALGRIND_ENVIRONMENT="$VALGRIND_ENVIRONMENT valgrind -q --error-exitcode=3 --leak-check=yes --leak-check=full --log-file=\$(builddir)/popt-valgrind-result --suppressions=\$(srcdir)/popt-vg.supp "
+              VALGRIND_ENVIRONMENT="$VALGRIND_ENVIRONMENT valgrind -q --error-exitcode=3 --leak-check=yes --leak-check=full --log-file=\$(builddir)/popt-valgrind-result"
               AC_SUBST([VALGRIND_ENVIRONMENT])
               ])
       ])
      
-AM_CONDITIONAL([USE_VALGRIND], [test x$use_valgrind != no])
-
 #  Checks for doxygen support. 
 AC_PATH_PROG(DOXYGEN, doxygen, NO_DOXYGEN)
 AC_ARG_ENABLE(doxygen,
