@@ -1,163 +1,0 @@
-{
-   bashMemLeak1
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_word_unsplit
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:execute_command_internal
-}
-{
-   bashMemLeak2
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:execute_command
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:reader_loop
-   fun:main
-}
-{
-   bashMemLeak3
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   obj:/bin/bash
-   fun:execute_command_internal
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_string_assignment
-}
-{
-   bashMemLeak4
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_word_unsplit
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:execute_command_internal
-}
-{
-   bashMemLeak5
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:execute_command
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:reader_loop
-   fun:main
-}
-{
-   bashMemLeak6
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   obj:/bin/bash
-   fun:execute_command_internal
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_string_assignment
-}
-{
-   bashMemLeak7
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_word_unsplit
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:execute_command_internal
-}
-{
-   bashMemLeak8
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:execute_command
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:reader_loop
-   fun:main
-}
-{
-   bashMemLeak9
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   obj:/bin/bash
-   fun:execute_command_internal
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_string_assignment
-}
-{
-   bashMemLeak10
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   fun:execute_command_internal
-   fun:parse_and_execute
-   fun:command_substitute
-   obj:/bin/bash
-   obj:/bin/bash
-   fun:expand_word_unsplit
-   obj:/bin/bash
-   fun:execute_command_internal
-   fun:execute_command
-   fun:execute_command_internal
-}
-{
-   bashMemLeak11
-   Memcheck:Leak
-   fun:malloc
-   fun:xmalloc
-   obj:/bin/bash
-   fun:yyparse
-   fun:parse_command
-   fun:read_command
-   fun:reader_loop
-   fun:main
-}
